# Whoamifuck

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs  update.rs
src/commands/: complete.rs  misc.rs  mod.rs  output.rs  quick.rs  risk.rs  special.rs
src/utils/: banner.rs  file_utils.rs  mod.rs  network_utils.rs  system_utils.rs
templates/: report.html
