[package]
name = "whoamifuck"
version = "0.6.0"
edition = "2021"
authors = ["zhuima <zhuima314@gmail.com>"]
description = "A Rust-based system security analysis and assessment。"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
clap_complete = "4.5"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
sysinfo = "0.29.0"  # 用于获取进程信息
byte-unit = "5.1.4"
anyhow = "1.0.91"
mac_address = "1.1.7"
reqwest = { version = "0.11", features = ["json", "native-tls", "default-tls"] }
regex = "1.5"
chrono = "0.4"
askama = "0.12"  # 添加模板引擎依赖
openssl = { version = "0.10", features = ["vendored"] }
colored = "2.0"
semver = "1.0"
self_update = { version = "0.41.0", features = ["archive-tar", "compression-flate2"] }


[build-dependencies]
chrono = "0.4"

[features]
vendored-openssl = ["openssl/vendored"]
